--- a/mysite/sandbox/templates/base.html
+++ b/mysite/sandbox/templates/base.html
@@ -21,7 +21,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-car-front-fill" viewBox="0 0 16 16">
                 <path d="M2.52 3.515A2.5 2.5 0 0 1 4.82 2h6.362c1 0 1.904.596 2.298 1.515l.792 1.848c.075.175.21.319.38.404.5.25.855.715.965 1.262l.335 1.679c.033.161.049.325.049.49v.413c0 .814-.39 1.543-1 1.997V13.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-1.338c-1.292.048-2.745.088-4 .088s-2.708-.04-4-.088V13.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-1.892c-.61-.454-1-1.183-1-1.997v-.413a2.5 2.5 0 0 1 .049-.49l.335-1.68c.11-.546.465-1.012.964-1.261a.807.807 0 0 0 .381-.404l.792-1.848ZM3 10a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm10 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2ZM6 8a1 1 0 0 0 0 2h4a1 1 0 1 0 0-2H6ZM2.906 5.189a.51.51 0 0 0 .497.731c.91-.073 3.35-.17 4.597-.17 1.247 0 3.688.097 4.597.17a.51.51 0 0 0 .497-.731l-.956-1.913A.5.5 0 0 0 11.691 3H4.309a.5.5 0 0 0-.447.276L2.906 5.19Z"/>
             </svg>
-            !Autoservisas!</a>
+            <strong>BMW Auto-Service</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,7 +30,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Pradžia</a>
                     <a class="nav-link" href="#">Automobiliai</a>
-                    <a class="nav-link" href="#">Užsakymai</a>
+                    <a class="nav-link" href="{% url 'orders' %}"><strong>ORDERS</strong></a>
+                    <a class="nav-link" href="{% url 'products' %}"><strong>SERVICES</strong></a>
                 </li>
                 {% if user.is_authenticated %}
 
@@ -41,11 +42,11 @@
                               clip-rule="evenodd"/>
                     </svg>
                     {{ user.get_username }}</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Mano uzsakymai</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Atsijungti</a></li>
+                <li class="nav-item"><a class="nav-link" href="#"><strong>MY ORDERS</strong></a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"><strong>LOGOUT</strong></a></li>
                 {% else %}
-                <li class="nav-item"><a class="nav-link" href="#">Registruotis</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Prisijungti</a></li>
+                <li class="nav-item"><a class="nav-link" href="#"><strong>REGISTER</strong></a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'login' %}"><strong>LOGIN</strong></a></li>
                 {% endif %}
 
                 <li>
