--- a/mysite/sandbox/templates/registration/login.html
+++ b/mysite/sandbox/templates/registration/login.html
@@ -5,12 +5,12 @@
 {% block content %}
 
   {% if form.errors %}
-    <p>Login Error: Try to login again!</p>
+    <p>Login Error: Try to log-in again!</p>
   {% endif %}
   
   {% if next %}
     {% if user.is_authenticated %}
-      <p>You don't have permnission to acces this information. You must be logged-in.</p>
+      <p>You don't have permission to access this information. You must be logged-in.</p>
     {% endif %}
   {% endif %}
   
