Pridetas homepage.html kuris vestu i pradini psl su norima info ir pan.

--- a/mysite/sandbox/templates/base.html
+++ b/mysite/sandbox/templates/base.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pradžia</a>
+                    <a class="nav-link" href="{% url 'homepage' %}"><strong>HOMEPAGE</strong></a>
                     <a class="nav-link" href="#">Automobiliai</a>
                     <a class="nav-link" href="{% url 'orders' %}"><strong>ORDERS</strong></a>
                     <a class="nav-link" href="{% url 'products' %}"><strong>SERVICES</strong></a>
