--- a/mysite/sandbox/templates/registration/password_reset_confirm.html
+++ b/mysite/sandbox/templates/registration/password_reset_confirm.html
@@ -20,7 +20,7 @@
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" value="Reset Password" /></td>
+                    <td><input type="submit" class="btn btn-dark btn-default" value="Reset Password" /></td>
                 </tr>
             </table>
         </form>
