--- a/mysite/sandbox/templates/registration/password_reset_email.html
+++ b/mysite/sandbox/templates/registration/password_reset_email.html
@@ -1,6 +1,6 @@
 Hello,
 
-We've got a request for password reset. If request was made by You, follow the link below:
+We've got a request for password reset. If request was made by You follow the link below:
 {{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
 Have a great rest of the Day!
