Perdaryta naujai, kiek suprantamiau ir isvaizda 'geriau'

--- a/mysite/sandbox/templates/homepage.html
+++ b/mysite/sandbox/templates/homepage.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <h3><strong>ABOUT US:</strong></h3>
+<hr>
 <p><strong>We are a brand new BMW auto-service with highly experienced employees.</strong></p>
 <p><strong>Our main focus is BMW models from soft-to-hard vehicles.</strong></p>
 <hr>
@@ -11,23 +12,30 @@
 <hr>
 <table class="table table-dark table-hover">
     <tr>
-        <th>Available Services:</th>
-        <th>Orders (all):</th>
-        <th>Orders Done:</th>
+        <th>Info:</th>
+        <th>Count:</th>
 
     </tr>
 
     <tr>
+
+        <td><strong>Available Services: </strong></td>
         <td>{{ service_count }}</td>
-        <td>{{ orders_count }}</td>
-        <td>{{ orders_done }}</td>
+
 
     </tr>
 
     <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+
+        <td><strong>Orders (all): </strong></td>
+        <td>{{ orders_count }}</td>
+
+    </tr>
+
+    <tr>
+
+        <td><strong>Orders Done: </strong></td>
+        <td>{{ orders_done }}</td>
 
     </tr>
 </table>
