Sutvarkytas admin.py modelis pridetas due_back ir list editable

--- a/mysite/sandbox/templates/homepage.html
+++ b/mysite/sandbox/templates/homepage.html
@@ -31,5 +31,8 @@
         <td>{{ orders_done }}</td>
     </tr>
 </table>
-
+<hr>
+<p><strong>Extra INFO:</strong></p>
+<p><strong>For vehicles under status 'Done' - Pick-up Time is 1-6 PM.</strong></p>
+<hr>
 {% endblock %}
