Raudonas order'is isskirstytas ir dalis jo padaryta kaip URL i single orderi (butent ta jo orderi), o due_back (deadline data), rodoma raudonai tiek isoriniame sarase tiek ir uzejus i single order'i

--- a/mysite/sandbox/templates/user_orders.html
+++ b/mysite/sandbox/templates/user_orders.html
@@ -8,7 +8,7 @@
 <ol>
 {% for element in user_orders %}
 <li>
-<p class="{% if element.is_overdue %}text-danger{% endif %}">{{ element }}</p>
+<p>{{ element.customer }} <a href="{% url 'order' element.pk %}">[{{ element.date }}]</a>; {{ element.status }} : <span class="{% if element.is_overdue %}text-danger{% endif %}">[{{ element.due_back }}]</span></p>
     </li>
 <hr>
 {% endfor %}
