Padaryta, kad issitrauktu viena kaina pagal modeli ir ja atspausdintu paciame orderyje (viename) - kiek ko ir kaip ir total.

--- a/mysite/sandbox/templates/order.html
+++ b/mysite/sandbox/templates/order.html
@@ -14,7 +14,8 @@
 <h3>Booked services:</h3>
 {% for line in order.lines.all %}
 
-<p><strong>{{ line.product }} ({% for element in line.product.products.all %}/{{element.price}}/{% endfor %})</strong> - {{ line.qty }}</p>
+<p><strong>{{ line.product }} ({% for element in line.product.products.all %}{% endfor %}){{line.product_price}}</strong> - {{ line.qty }}</p>
 
 {% endfor %}
+<hr>
 {% endblock %}
