--- a/mysite/sandbox/templates/product.html
+++ b/mysite/sandbox/templates/product.html
@@ -4,12 +4,27 @@
 
 {% block content %}
 
-<p><strong>Service name: </strong> {{ product.name }} </p>
+<h4><strong> {{ product.name }} </strong></h4>
 <hr>
-<p><strong>Vehicle model/price: </strong>
-{% for model in product.models.all %}
+<p><strong>INFO: </strong>
+<p><strong>Pro tip:</strong> in this Table you can find all prices for various BMW models.</p>
+<hr>
+<table class="table table-dark table-hover">
+    <tr>
+        <th>Vehicle Model:</th>
+        <th>Price per Service:</th>
+    </tr>
+{% for model in product.products.all %}
+    <tr>
+        <td><strong>{{ model.model }}</strong></td>
+        <td>{{ model.price }}</td>
+    </tr>
+{% endfor %}
+</table>
+<hr>
+{% for model in product.products.all %}
   <hr>
-    <p>{{ model.price }}</p>
+    <p>{{ model.model }} : {{ model.price }}</p>
 <hr>
 </p>
 {% endfor %}
