--- a/mysite/sandbox/templates/products.html
+++ b/mysite/sandbox/templates/products.html
@@ -11,4 +11,23 @@
   </a>
 <hr>
   {% endfor %}
+<div class="container pages">
+    <nav aria-label="...">
+        {% if products.has_other_pages %}
+            <ul class="pagination pagination-sm justify-content-center">
+                {% for i in products.paginator.page_range %}
+                    {% if products.number == i %}
+                        <li class="page-item active">
+                            <a class="page-link">{{ i }}</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        {% endif %}
+    </nav>
+</div>
 {% endblock %}
