Pakoreguotas user_orders.html, pridetas userio orderiu TOTAL skaicius

--- a/mysite/sandbox/templates/user_orders.html
+++ b/mysite/sandbox/templates/user_orders.html
@@ -31,12 +31,11 @@
     </tr>
 {% endfor %}
     <tr>
+        <td><strong>ORDERS TOTAL: </strong></td>
+        <td><strong>{{ user_orders.count }}</strong></td>
         <td></td>
-        <td></td>
-        <td><strong>TOTAL: </strong></td>
         <td></td>
     </tr>
 </table>
-
 <hr>
 {% endblock %}
