--- a/mysite/sandbox/templates/base.html
+++ b/mysite/sandbox/templates/base.html
@@ -50,8 +50,8 @@
                 {% endif %}
 
                 <li>
-                <form action="#" method="get" class="form-inline my-2 my-md-0">
-                <input name="query" class="form-control" type="text" placeholder="Paieška">
+                <form action="{% url 'search' %}" method="get" class="form-inline my-2 my-md-0">
+                <input name="query" class="form-control" type="text" placeholder="SEARCH...">
                 </form>
                 </li>
 
