Prideti model.html ir models.html failai - vartotojas gali apziureti aptarnaujamus modelius ir nueiti i kiekvieno aprasymo, kurio dar nera (bet bus)

--- a/mysite/sandbox/templates/base.html
+++ b/mysite/sandbox/templates/base.html
@@ -29,8 +29,9 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'homepage' %}"><strong>HOMEPAGE</strong></a>
-                    <a class="nav-link" href="#">Automobiliai</a>
+
                     <a class="nav-link" href="{% url 'orders' %}"><strong>ORDERS</strong></a>
+                    <a class="nav-link" href="{% url 'models' %}"><strong>BMW MODELS</strong></a>
                     <a class="nav-link" href="{% url 'products' %}"><strong>SERVICES</strong></a>
                 </li>
                 {% if user.is_authenticated %}
