Sutvarkytas base.html del MENIU puktu rodymo (tik staff'ui atvaizduojamas punktas)

--- a/mysite/sandbox/templates/search.html
+++ b/mysite/sandbox/templates/search.html
@@ -7,7 +7,7 @@
 {% if products %}
   {% for element in products %}
 <hr>
-<a href="{% url 'product' element.id %}{% url 'model' element.id%}">
+<a href="{% url 'product' element.id %}">
 <p><strong> {{ element }} </strong></p>
   </a>
 <hr>
