--- a/mysite/sandbox/templates/base.html
+++ b/mysite/sandbox/templates/base.html
@@ -26,14 +26,32 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'homepage' %}"><strong>HOMEPAGE</strong></a>
+            {% if user.is_authenticated %}
+                {% if user.is_staff %}
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'homepage' %}"><strong>HOMEPAGE</strong></a>
 
-                    <a class="nav-link" href="{% url 'orders' %}"><strong>ORDERS</strong></a>
-                    <a class="nav-link" href="{% url 'models' %}"><strong>BMW MODELS</strong></a>
-                    <a class="nav-link" href="{% url 'products' %}"><strong>SERVICES</strong></a>
-                </li>
+                        <a class="nav-link" href="{% url 'orders' %}"><strong>ORDERS</strong></a>
+                        <a class="nav-link" href="{% url 'models' %}"><strong>BMW MODELS</strong></a>
+                        <a class="nav-link" href="{% url 'products' %}"><strong>SERVICES</strong></a>
+                    </li>
+                {% else %}
+                    <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'homepage' %}"><strong>HOMEPAGE</strong></a>
+                        <a class="nav-link" href="{% url 'models' %}"><strong>BMW MODELS</strong></a>
+                        <a class="nav-link" href="{% url 'products' %}"><strong>SERVICES</strong></a>
+                    </li>
+                {% endif %}
+            {% else %}
+                    <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'homepage' %}"><strong>HOMEPAGE</strong></a>
+                        <a class="nav-link" href="{% url 'models' %}"><strong>BMW MODELS</strong></a>
+                        <a class="nav-link" href="{% url 'products' %}"><strong>SERVICES</strong></a>
+                    </li>
+            {% endif %}
                 {% if user.is_authenticated %}
 
                 <li class="nav-item"><a class="nav-link" href="#">
