--- a/mysite/sandbox/templates/model.html
+++ b/mysite/sandbox/templates/model.html
@@ -10,7 +10,7 @@
     </div>
   {% else %}
     <div class="col-md-4 align-items-stretch">
-    <img src="{% static 'img/no-image.png' %}" class="card-img-top">
+    <img src="{% static 'img/no-image.png' %}" class="max-width: 20%">
   </div>
   {% endif %}
 <hr>
