Pridetas description laukas (tinyMCE), prie VehicleModel (models.py), HTML'e padarytas kaip   ' | safe'

--- a/mysite/sandbox/templates/model.html
+++ b/mysite/sandbox/templates/model.html
@@ -16,12 +16,14 @@
 <hr>
 <h4><strong> {{ model }} </strong></h4>
 <hr>
+<h5><strong>Model Description:</strong></h5>
+{{ model.description | safe }}
 <hr>
 
 {% for product in products.all %}
 
   <hr>
-    <p>{{ product.name }} : {{ product.price }} </p>
+    <p>{{ product.name }} : {{ product.products.model.price }} </p>
 <hr>
 {% endfor %}
 
