--- a/mysite/sandbox/templates/base.html
+++ b/mysite/sandbox/templates/base.html
@@ -64,7 +64,7 @@
                 <li class="nav-item"><a class="nav-link" href="{% url 'user_orders' %}"><strong>MY ORDERS</strong></a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"><strong>LOGOUT</strong></a></li>
                 {% else %}
-                <li class="nav-item"><a class="nav-link" href="#"><strong>REGISTER</strong></a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'register' %}"><strong>REGISTER</strong></a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'login' %}"><strong>LOGIN</strong></a></li>
                 {% endif %}
 
