--- a/mysite/sandbox/templates/registration/register.html
+++ b/mysite/sandbox/templates/registration/register.html
@@ -31,7 +31,7 @@
             <button type="submit" class="btn btn-primary register-button">Register</button>
         </form>
         <hr>
-        <p>Alrady have an account? <a href="{% url 'login' %}"><strong>Login.</strong></a></p>
+        <p>Alrady have an account? <a href="{% url 'login' %}"><strong>LOGIN.</strong></a></p>
     </div>
 
 {% endblock %}
