--- a/mysite/sandbox/templates/order.html
+++ b/mysite/sandbox/templates/order.html
@@ -3,17 +3,17 @@
 {% block title %}ORDER{% endblock %}
 
 {% block content %}
-<hr>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <h3>Single order:</h3>
-<hr>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <p><strong>Customer name: </strong> {{ order.customer }} </p>
 <p><strong>Date: </strong> {{ order.date }} </p>
 <p><strong>Order status: </strong> {{ order.status }} </p>
 <p><strong>Deadline: </strong> <span class="{% if order.is_overdue %}text-danger{% endif %}">[{{ order.due_back }}]</span> </p>
-
-<hr>
+<br>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <h3>Booked services:</h3>
-<hr>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 {% for line in order.lines.all %}
 
 <p><strong>{{ line.product }} {% for element in line.product.products.all %}{% endfor %}</strong>({{line.product_price}})<strong> - {{ line.qty }}; SUM: </strong>({{ line.sum_for }})</p>
@@ -21,9 +21,10 @@
 {% endfor %}
 <hr>
 <p><strong>TOTAL SUM:</strong> {{ order.total }} </p>
-<hr>
+<br>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <h3>SUM UP:</h3>
-<hr>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
 <table class="table table-dark table-hover">
     <tr>
@@ -47,7 +48,19 @@
         <td>{{ order.total }}</td>
     </tr>
 </table>
-<hr>
+<br>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+<h3>Comments:</h3>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+  {% if order.comments.all %}
+    {% for comment in order.comments.all %}
+      <hr>
+      <strong>{{ comment.commentator }}</strong>, <em>{{ comment.date_created}}</em>
+      <p>{{ comment.comment }}</p>
+    {% endfor %}
+  {% else %}
+    <p>No Comments on this Order.</p>
+  {% endif %}
 <hr>
 
 
