--- a/mysite/sandbox/templates/order.html
+++ b/mysite/sandbox/templates/order.html
@@ -33,9 +33,9 @@
 <hr>
 <p><strong>TOTAL SUM:</strong> {{ order.total }} </p>
 <br>
-<hr style="height:2px;border-width:0;color:gray;background-color:red">
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <h3>SUM UP:</h3>
-<hr style="height:2px;border-width:0;color:gray;background-color:red">
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
 <table class="table table-dark table-hover">
     <tr>
