Prideta hr stilistika, url atgal i modelius (navigacija siokia tokia) gal kiek pakoreguosiu veliau (kad gritu vienu atgal, i modelius ir taip galima nueiti); ne viskas istrinta kas nereikalinga

--- a/mysite/sandbox/templates/model.html
+++ b/mysite/sandbox/templates/model.html
@@ -26,8 +26,8 @@
     <p>{{ element.product.name }} : {{ element.price }} </p>
 <hr>
 {% endfor %}
-
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <h4><strong>GET PRICES FOR ALL SERVICES</strong></h4>
 <p><a href="{% url 'vehicle_model' model.id %}">PRESS HERE</a></p>
-
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 {% endblock %}
