--- a/mysite/sandbox/templates/vehicle_model.html
+++ b/mysite/sandbox/templates/vehicle_model.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}MODELS/PRICES{% endblock %}
+{% block title %}MODEL-SERV/PRICES{% endblock %}
 
 {% block content %}
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
-<h3><strong>SERVICES & PRICES/per unit:</strong></h3>
+<h3><strong>SERVICES & PRICES/per unit (MODEL - {{ vehicle_model.model }}):</strong></h3>
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
 {% for x in vehicle_model.models.all %}
