--- a/mysite/sandbox/templates/orders.html
+++ b/mysite/sandbox/templates/orders.html
@@ -3,6 +3,7 @@
 {% block title %}Orders{% endblock %}
 
 {% block content %}
+{% if user.is_staff %}
 <h3>Our orders:</h3>
   {% for element in orders %}
 <hr>
@@ -11,4 +12,8 @@
 </a>
 <hr>
   {% endfor %}
+{% else %}
+<h3><strong>Not Found: 404 ERROR.</strong></h3>
+<h3><strong>This Information is Forbiden!</strong></h3>
+{% endif %}
 {% endblock %}
