Prideti tie patys mygtukai prie vehicle_model.html, model.html ir order.html (comments)

--- a/mysite/sandbox/templates/order.html
+++ b/mysite/sandbox/templates/order.html
@@ -70,7 +70,7 @@
     <form action="" method="post">
       {% csrf_token %}
       {{ form.comment }}</br>
-      <input type="submit" value="Comment now">
+      <input type="submit" class="btn btn-dark btn-default" value="COMMENT">
     </form>
   </div>
   {% endif %}
