--- a/mysite/sandbox/templates/vehicle_model.html
+++ b/mysite/sandbox/templates/vehicle_model.html
@@ -21,8 +21,8 @@
 </table>
 
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
-<h4><strong>GET BACK TO MODELS:</strong></h4>
-<p><a href="{% url 'models' %}">PRESS HERE</a></p>
+<h4><strong>GO BACK TO MODELS:</strong></h4>
+<a href="{% url 'models' %}"><input type="submit" class="btn btn-dark btn-default" value="PRESS HERE!"></a>
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
 {% endblock %}
