--- a/mysite/sandbox/templates/model.html
+++ b/mysite/sandbox/templates/model.html
@@ -22,6 +22,6 @@
 
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <h4><strong>GET PRICES FOR ALL SERVICES</strong></h4>
-<p><a href="{% url 'vehicle_model' model.id %}">PRESS HERE</a></p>
+<a href="{% url 'vehicle_model' model.id %}"><input type="submit" class="btn btn-dark btn-default" value="PRESS HERE!"></a>
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 {% endblock %}
