--- a/mysite/sandbox/templates/user_orders.html
+++ b/mysite/sandbox/templates/user_orders.html
@@ -3,19 +3,9 @@
 {% block title %}MY ORDERS{% endblock %}
 
 {% block content %}
-<h3><strong>My Orders:</strong></h3>
-<hr>
-<ol>
-{% for element in user_orders %}
-<li>
-<p>{{ element.customer }} <a href="{% url 'order' element.pk %}">[{{ element.date }}]</a>; {{ element.status }} : <span class="{% if element.is_overdue %}text-danger{% endif %}">
-    {% if not element.is_overdue %}[{{ element.due_back }}] {% else %} [{{ element.due_back }}] - <span class="text-small">Your Order is Overdue: Contact Administration!</span>{% endif %}</span></p>
-    </li>
-<hr>
-{% endfor %}
-</ol>
-
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <h3><strong>My Orders Table:</strong></h3>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <table class="table table-dark table-hover">
     <tr>
         <th>Username:</th>
@@ -39,4 +29,35 @@
     </tr>
 </table>
 <hr>
+
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+<h3><strong>Delayed Orders:</strong></h3>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+<hr>
+<ol>
+{% for element in user_orders %}
+    {% if element.is_overdue %}
+<li>
+
+<p>{{ element.customer }} <a href="{% url 'order' element.pk %}">[{{ element.date }}]</a>; {{ element.status }} : <span class="{% if element.is_overdue %}text-danger{% endif %}">
+    {% if not element.is_overdue %}[{{ element.due_back }}] {% else %} [{{ element.due_back }}]
+    <p><span class="text-danger">
+    <hr>
+    <div>
+<h5><strong>ATTENTION!</strong></h5>
+    <p>This Order is Overdue!</p>
+    <p>Contact Administration or go to the Order Chat.</p></span></p>{% endif %}</span></p>
+    </div>
+    </li>
+    {% else %}
+        <div>
+    <h5><strong>HAPPY DAYS!</strong></h5>
+    <p>None of Your Orders are Delayed!</p>
+        </div>
+    {% endif %}
+<hr>
+{% endfor %}
+</ol>
+
+
 {% endblock %}
