Pridetas UserProfile modelis models.py faile (kolkas padaryta 50/50), bet i puslapi, paspaudus iconele patenkama ir gaunama username ir email

--- a/mysite/sandbox/templates/products.html
+++ b/mysite/sandbox/templates/products.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Services{% endblock %}
+{% block title %}SERVICES{% endblock %}
 
 {% block content %}
 <h3>Our services:</h3>
