--- a/mysite/sandbox/templates/user_orders.html
+++ b/mysite/sandbox/templates/user_orders.html
@@ -50,7 +50,7 @@
     <div>
     <h5><strong>ATTENTION!</strong></h5>
     <p>This Order is Overdue!</p>
-    <p>Contact Administration or go to the Order Chat.</p></span></p>{% endif %}</span></p>
+    <p>Contact Administration or go to the Order Chat for further information.</p></span></p>{% endif %}</span></p>
     </div>
     </li>
     <hr>
