--- a/mysite/sandbox/templates/profile.html
+++ b/mysite/sandbox/templates/profile.html
@@ -5,12 +5,17 @@
 {% block content %}
     <div class="content-section">
       <div class="media">
-        <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-        <div class="media-body">
-          <h2 class="account-heading">{{ user.username }}</h2>
-          <p class="text-secondary">{{ user.email }}</p>
+        <img class="rounded-circle account-img" src="{{ user.userprofile.picture.url }}">
         </div>
-      </div>
+        <br>
+        <div class="media-body">
+          <h2 class="account-heading">USER: {{ user.username }}</h2>
+            <hr>
+          <p class="text-secondary">EMAIL: {{ user.email }}</p>
+          <p class="text-secondary">Date Joined: {{ user.date_joined }}</p>
+            <hr>
+        </div>
+
       <!-- FORM HERE -->
     </div>
 {% endblock %}
