Pridetas vartotojo ir jo profilio redagavimas Front-end'e

--- a/mysite/sandbox/templates/profile.html
+++ b/mysite/sandbox/templates/profile.html
@@ -33,7 +33,7 @@
                 {{ p_form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-dark btn-default" type="submit">SUBMIT</button>
+                <button class="btn btn-dark btn-default" type="submit">UPDATE</button>
             </div>
         </form>
         <hr>
