Prie kiekvieno ORDER'io ( orders.html ) prideta uzsakovo nuotrauka is jo profilio (100/100)

--- a/mysite/sandbox/templates/orders.html
+++ b/mysite/sandbox/templates/orders.html
@@ -10,6 +10,7 @@
 <a href="{% url 'order' element.id %}">
 <p>{{ element }}</p>
 </a>
+ <img class="account-img" src="{{element.customer.userprofile.picture.url}}">
 <hr>
   {% endfor %}
 {% else %}
