--- a/mysite/sandbox/templates/profile.html
+++ b/mysite/sandbox/templates/profile.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="content-section">
       <div class="media">
-        <img class="rounded-circle account-img" src="{{ user.userprofile.picture.url }}">
+        <img class="account-img" src="{{ user.userprofile.picture.url }}">
         </div>
         <br>
         <div class="media-body">
