--- a/mysite/sandbox/templates/order.html
+++ b/mysite/sandbox/templates/order.html
@@ -17,11 +17,20 @@
 <h3>Single order:</h3>
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <p><strong>Customer name: </strong> {{ order.customer }} </p>
+<p><strong>Model: </strong> {{ order.model }} </p>
 <p><strong>Date: </strong> {{ order.date }} </p>
 <p><strong>Order status: </strong> {{ order.status }} </p>
 <p><strong>Deadline: </strong> <span class="{% if order.is_overdue %}text-danger{% endif %}">[{{ order.due_back }}]</span> </p>
 <br>
 {% endif %}
+<hr>
+{% if object.customer == user %}
+    <div>
+        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'order_update' order.id %}">UPDATE</a>
+        <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'order_delete' order.id %}">DELETE</a>
+    </div>
+{% endif %}
+<hr>
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <h3>Booked services:</h3>
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
